# tellaro-pm

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml  release-agent.yml  security-updates.yml
agent/: .env.example  Cargo.toml  pyproject.toml
agent/src/: claude.rs  config.rs  connection.rs  doctor.rs  install.rs  log_stream.rs  main.rs  mcp.rs  provision.rs  worker.rs
agent/src/tellaro_agent/: __init__.py  claude.py  config.py  connection.py  discovery.py  main.py  personas.py  worker.py
agent/tests/: conftest.py  test_config.py
backend/: .env.example  pyproject.toml
backend/src/tellaro_pm/: __init__.py  main.py
backend/src/tellaro_pm/admin/: router.py
backend/src/tellaro_pm/agents/: logs.py  provisioning.py  provisioning_router.py  provisioning_schemas.py  router.py  schemas.py  service.py
backend/src/tellaro_pm/auth/: router.py  schemas.py  service.py  sessions.py
backend/src/tellaro_pm/chat/: router.py  schemas.py  service.py
backend/src/tellaro_pm/core/: auth.py  dependencies.py  models.py  opensearch.py  settings.py  tql_router.py  tql_service.py
backend/src/tellaro_pm/github_integration/: router.py  schemas.py  service.py  webhooks.py
backend/src/tellaro_pm/projects/: router.py  schemas.py  service.py
backend/src/tellaro_pm/tasks/: router.py  schemas.py  service.py
backend/src/tellaro_pm/users/: router.py  schemas.py  service.py
backend/src/tellaro_pm/websocket/: manager.py  router.py
backend/tests/: conftest.py  test_settings.py
docs/: GITHUB_APP_SETUP.md  ROADMAP.md  TQL.md
frontend/: eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/e2e/: example.spec.ts
frontend/src/: App.vue
frontend/src/api/: client.ts
frontend/src/components/: TellaroTable.vue
frontend/src/router/: index.ts
frontend/src/stores/: agents.ts  auth.ts  chat.ts  index.ts  projects.ts  tasks.ts
frontend/src/types/: index.ts
frontend/src/views/: AdminView.vue  AgentsView.vue  ChatView.vue  DashboardView.vue  KanbanBoardView.vue  LoginView.vue  ProjectDetailView.vue  ProjectListView.vue  SettingsView.vue  TaskDetailView.vue
frontend/tests/: App.spec.ts
nginx/: dev.conf
