[package]
name = "tellaro-pm-agent"
version = "0.1.0"
edition = "2021"
description = "Tellaro PM agent daemon — manages Claude Code sessions, MCPs, and self-healing"
license = "MIT"

[[bin]]
name = "tellaro-pm-agent"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (provisioning exchange, health checks)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# WebSocket client
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# Misc
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
which = "7"
hostname = "0.4"
urlencoding = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
