[tool.poetry]
name = "tellaro-pm-backend"
version = "0.1.0"
description = "Tellaro PM - AI-orchestration-first project management backend"
authors = []
packages = [{include = "tellaro_pm", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = ">=0.115,<1"
uvicorn = {version = ">=0.34,<1", extras = ["standard"]}
opensearch-py = ">=2.7,<3"
pydantic = ">=2.10,<3"
pydantic-settings = ">=2.7,<3"
python-dotenv = ">=1.0,<2"
redis = ">=5.0,<6"
python-jose = {version = ">=3.3,<4", extras = ["cryptography"]}
bcrypt = ">=4.0,<6"
httpx = ">=0.28,<1"
email-validator = ">=2.0,<3"
websockets = ">=14,<15"
cryptography = ">=44,<45"
tellaro-query-language = ">=0.3,<1"

[tool.poetry.group.dev.dependencies]
pytest = ">=8,<9"
pytest-asyncio = ">=0.25,<1"
pytest-cov = ">=6,<7"
ruff = ">=0.9,<1"
pyright = ">=1.1,<2"
bandit = ">=1.8,<2"
semgrep = ">=1.100,<2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "SIM", "TCH", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["tellaro_pm"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
include = ["src"]

[tool.bandit]
targets = ["src"]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
